# Pokemon

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Engine/: GameEngine.cpp  GameEngine.h  GameObject.h  Scene.cpp  Scene.h
Entities/: Player.cpp  Player.h
Game/: Game.cpp  Game.h
Manager/Texture/: TextureManager.cpp  TextureManager.h
SDL/include/: SDL_hints.h  SDL_main.h  SDL_test_crc32.h  SDL_thread.h
